<resources>
    <string name="app_name">BTVNDesignUI1</string>
    <string name="email_or_phone">Email or phone number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="banque">Banque</string>
    <string name="personnalle">Personnalle</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="smart_editor">Smart Editor</string>
</resources>