<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_login_drib1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/d_40"
    android:orientation="vertical">
    
    <TextView
        android:text="Welcome"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/d_40"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/d_40"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/d_50"
        android:hint="@string/email"
        android:textSize="@dimen/d_20"
        android:background="@color/colorWhite"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10"
        android:paddingStart="@dimen/d_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/d_20"
        android:hint="@string/password"
        android:textSize="@dimen/d_20"
        android:background="@color/colorWhite"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10"
        android:paddingStart="@dimen/d_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="end"
        android:layout_marginTop="@dimen/d_20"
        android:textSize="@dimen/d_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorGray"/>

    <Button
        android:text="@string/sign_in"
        android:background="@color/colorBlue"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/d_20"
        android:layout_marginTop="@dimen/d_20"
        android:layout_gravity="end"
        android:paddingStart="@dimen/d_40"
        android:paddingEnd="@dimen/d_40"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>