<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/act_login_drib2"
    android:gravity="center_horizontal"
    android:padding="@dimen/d_30"
    android:orientation="vertical">


    <TableRow
        android:layout_marginTop="@dimen/d_50"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_money"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banque"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/d_40" />
    </TableRow>

    <TextView
        android:text="@string/personnalle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/d_40"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/d_40"
        android:hint="@string/email_address"
        android:paddingStart="@dimen/d_20"
        android:background="@drawable/et_drib2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"/>

    <EditText
        android:layout_marginTop="@dimen/d_15"
        android:hint="@string/email_address"
        android:paddingStart="@dimen/d_20"
        android:background="@drawable/et_drib2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"/>

    <Button
        android:layout_marginTop="@dimen/d_15"
        android:paddingStart="@dimen/d_30"
        android:paddingEnd="@dimen/d_30"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/d_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="false"/>

</LinearLayout>